--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="index.css" rel="stylesheet" />
     <title>sticky_card</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="cards">
+      <div class="crad">
+        <div class="card__heading">
+          <p class="Heading"></p>
+        </div>
+
+        <div class="card__content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+            consequuntur unde eligendi, vel ex a odit quo quae nostrum
+            laboriosam!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+            culpa ipsam iure aliquam natus eius perferendis dicta cupiditate
+            mollitia voluptatem molestiae esse aperiam, repellendus laudantium
+            etpossimus magni. Exercitationem rem esse iusto illum aspernatur
+            nemo ratione rerum odio recusandae impedit?
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
