--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <div class="cards">
       <div class="crad">
         <div class="card__heading">
-          <p class="Heading"></p>
+          <p class="Heading">1</p>
+        </div>
+
+        <div class="card__content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+            consequuntur unde eligendi, vel ex a odit quo quae nostrum
+            laboriosam!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+            culpa ipsam iure aliquam natus eius perferendis dicta cupiditate
+            mollitia voluptatem molestiae esse aperiam, repellendus laudantium
+            etpossimus magni. Exercitationem rem esse iusto illum aspernatur
+            nemo ratione rerum odio recusandae impedit?
+          </p>
+        </div>
+      </div>
+
+      <div class="crad">
+        <div class="card__heading">
+          <p class="Heading">2</p>
         </div>
 
         <div class="card__content">
